[package]
name = "json-rpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["ws"] }
axum-jrpc = "0.8.0"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
yerpc = { version = "0.6.2", features = ["support-axum", "openrpc"] }
